anon/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
        name: ingress-nginx
        namespace: ingress-nginx
        labels:
                app.kubernetes.io/name: ingress-nginx
                app.kubernetes.io/part-of: ingress-nginx
spec:
        # type: ClusterIP
        # https://kubernetes.io/docs/concepts/services-networking/service/#nodeport
        type: NodePort
        ports:
                - name: http
                  port: 80
                  targetPort: 80
                  nodePort: 30080
                  protocol: TCP
                - name: https
                  port: 443
                  targetPort: 443
                  nodePort: 30443
                  protocol: TCP
        selector:
                app.kubernetes.io/name: ingress-nginx
                app.kubernetes.io/part-of: ingress-nginx
