anon/ingress/hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: hello-world-ingress
        namespace: default
        annotations:
                # use the shared ingress-nginx
                # 이 클래스 정보를 이용해 ingress-nginx-controller 가 설정 정보들을 수집함
                kubernetes.io/ingress.class: "nginx"
                nginx.org/ssl-services: "hello-world-service"
                ingress.kubernetes.io/ssl-passthrough: "true"
                nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
        tls:
        - hosts:
          - cluster.rpi.nicesj.com
          secretName: cluster
        rules:
        - host: cluster.rpi.nicesj.com
          http:
                paths:
                - path: /
                  backend:
                        serviceName: hello-world-service
                        servicePort: 443
# 아래 구분자로 여러개의 spec file 을 적용할 수 있음.
# ---
